--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
                                 </div>
                             </div>
                             <div class="image">
-                                <img src="img/plane_cover.png">
+                                <img src="img/plane_cover1.png">
                             </div></a>
                         </div>
                     </div>
@@ -229,3 +229,4 @@
 </body>
 
 </html>
+
